tests/cases/errors/parser/stmt_break.vnm
fn main() {
  let x = 0;
  while (x < 10) {
    print x;
    if (x == 5) {
      break
    }
    x = x + 1;
  }
  return 0;
}

main();
